Fixed issue with page number not showing in touch mode.

--- a/styles.css
+++ b/styles.css
@@ -326,15 +326,16 @@ button {
 }
 
 .touchOverlayPageNumber {
-	position: absolute;
 	pointer-events: none;
-	display: flex;
-	justify-content: top;
-	align-items: left;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	z-index: 500;
 	color: DeepSkyBlue;
 	font-size: 5vw;
 	text-shadow: 4px 4px 20px black;
 	opacity: 0.5;
+	display: none;
 }
 
 .touchLoadingProgress {
